# marrow

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DISCORD.md  README.md  config.example.toml  secrets.example.toml
.github/workflows/: ci.yml  release.yml
docs/: marrow-dash.service  marrow-discord.service  model-benchmarks-2026-03.md
knowledge/: infrastructure.md  profile.md
marrow/: Cargo.toml
marrow-cli/: Cargo.toml
marrow-cli/src/: main.rs
marrow-dash/: Cargo.toml
marrow-dash/src/: main.rs  state.rs
marrow-dash/src/api/: backend_errors.rs  debug.rs  events.rs  kv.rs  memories.rs  mod.rs  overview.rs  schedules.rs  skills.rs  tasks.rs  tools.rs
marrow-dash/src/data/: backend_errors.rs  config.rs  events.rs  kv.rs  memory.rs  mod.rs  schedules.rs  skills.rs  toolbox.rs
marrow-dash/src/frontend/: index.html  mod.rs
marrow-discord/: Cargo.toml
marrow-discord/src/: main.rs
marrow/src/: agent.rs  answer_check.rs  codegen.rs  context.rs  events.rs  executor.rs  heartbeat.rs  janitor.rs  lib.rs  memory.rs  memory_documents.rs  memory_provider.rs  memory_writer.rs  metrics.rs  model.rs  planner.rs  raw_log.rs  registry.rs  retry.rs  router.rs  runtime.rs  sandbox.rs  sandbox_host.rs  schedule.rs  secrets.rs  session.rs  skills.rs  task.rs  tool.rs  tool_selection.rs  toolbox.rs  update.rs  xml.rs
marrow/src/backends/: mod.rs  ollama.rs  openai.rs
marrow/src/tools/: caldav.rs  http_fetch.rs  memory_delete.rs  memory_search.rs  memory_update.rs  mod.rs  rss.rs  schedule.rs  sl_transit.rs  state_get.rs  state_set.rs  stathost.rs
marrow/tests/: integration.rs
src/: agent.rs  codegen.rs  context.rs  events.rs  executor.rs  janitor.rs  lib.rs  main.rs  memory.rs  memory_writer.rs  metrics.rs  model.rs  persistence.rs  registry.rs  router.rs  sandbox_host.rs  session.rs  task.rs  tool_selection.rs  toolbox.rs  triage.rs
src/backends/: ollama.rs  openai.rs
tests/: integration.rs
