[package]
name = "marrow-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "marrow"
path = "src/main.rs"

[dependencies]
marrow = { path = "../marrow" }
clap = { version = "4.6.0", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.23.0", features = ["v4"] }
