[package]
name = "marrow-dash"
version.workspace = true
edition.workspace = true

[[bin]]
name = "marrow-dash"
path = "src/main.rs"

[dependencies]
axum = "0.8.9"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
marrow = { path = "../marrow" }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlite-vec = "0.1.9"
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2"
