[package]
name = "marrow-discord"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "marrow-discord"
path = "src/main.rs"

[dependencies]
marrow = { path = "../marrow" }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.23.0", features = ["v4"] }
