[package]
name = "marrow"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = "0.4"
mlua = { version = "0.11.6", features = ["lua54", "async", "send", "serialize", "vendored"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
quick-xml = "0.37"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.1.0"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
flate2 = "1.1.9"
tar = "0.4.45"
rusqlite = { version = "0.39.0", features = ["bundled", "load_extension"] }
sqlite-vec = "0.1.9"

[dev-dependencies]
tempfile = "3.27.0"
